<resources>
    <string name="app_name">Pokemon</string>

    <string name="types">Type</string>

    <string name="habitat">Habitat</string>

    <string name="weight">Weight</string>

    <string name="height">Height</string>

    <string name="favorite_check">add as favorite</string>

    <string name="favorite_uncheck">remove from favorites</string>

    <string name="add_favorite_message">%s successfully added to favorites</string>

    <string name="remove_favorite_message">%s successfully removed from favorites</string>

    <string name="add_favorite_error">Was not possible add %s to favorites</string>

    <string name="remove_favorite_error">Was not possible remove %s from favorites</string>

    <string name="moves">Moves</string>

    <string name="types_separator" translatable="false">&#160;,&#160;</string>

    <string name="image_key" translatable="false">pokemon_image_key</string>

    <string name="pokemon_list_initial_data_error">Sorry, our server is not working at moment.\n<b>Try again</b></string>

    <string name="pokemon_add_to_favorite_error">Sorry, we can\'t add %s to favorite at moment</string>

    <string name="pokemon_remove_from_favorite_error">Sorry, we can\'t remove %s from favorite at moment</string>

    <string name="pokemon_list_increase_data_error">Sorry, our server is not working at moment.</string>

    <string name="pokemon_photo">photo</string>

</resources>